// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem /> renders default 1`] = `
.c0 {
  padding: 0.5rem 1rem 0 0;
}

<List__ListItem>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "List__ListItem-f451ab-1",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "padding:0.5rem 1rem 0 0;color:",
            [Function],
            ";",
          ],
        },
        "displayName": "List__ListItem",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "List__ListItem-f451ab-1",
        "target": "li",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <li
      className="c0"
    />
  </StyledComponent>
</List__ListItem>
`;

exports[`<ListItem /> renders with theme 1`] = `
.c0 {
  padding: 0.5rem 1rem 0 0;
  color: #8d8d8d;
}

<List__ListItem
  theme={
    Object {
      "bg": "#000",
      "bgAdd": "#202124",
      "color": "#fff",
      "colorAdd": "#8d8d8d",
      "shadow": "none",
    }
  }
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "List__ListItem-f451ab-1",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "padding:0.5rem 1rem 0 0;color:",
            [Function],
            ";",
          ],
        },
        "displayName": "List__ListItem",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "List__ListItem-f451ab-1",
        "target": "li",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    theme={
      Object {
        "bg": "#000",
        "bgAdd": "#202124",
        "color": "#fff",
        "colorAdd": "#8d8d8d",
        "shadow": "none",
      }
    }
  >
    <li
      className="c0"
    />
  </StyledComponent>
</List__ListItem>
`;

exports[`renders default <List /> 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "List-f451ab-0",
        "isStatic": false,
        "rules": Array [
          "display:flex;flex-flow:row wrap;width:60%;margin:0;padding:0;list-style-type:none;",
        ],
      },
      "displayName": "List",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "List-f451ab-0",
      "target": "ul",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`renders default <Menu /> 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "List__Menu-f451ab-2",
        "isStatic": false,
        "rules": Array [
          "display:flex;flex-flow:row wrap;width:60%;margin:0;padding:0;list-style-type:none;",
          "justify-content:space-around;width:100%;text-transform:uppercase;@media screen and (min-width:40rem){justify-content:flex-end;}",
        ],
      },
      "displayName": "List__Menu",
      "foldedComponentIds": Array [
        "List-f451ab-0",
      ],
      "render": [Function],
      "styledComponentId": "List__Menu-f451ab-2",
      "target": "ul",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
